# fish-bidding

./: .env  .envrc  Pipfile  README.md  pyproject.toml  socialsimple.db  start.sh
app/: app.py  db.py  images.py  schemas.py
backend/: auction.db  database.py  main.py  models.py  requirements.txt  schemas.py  security.py  ws_manager.py
backend/routers/: auctions.py  auth.py  bids.py  lots.py  members.py  payments.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: AdminDashboard.jsx  AuctionRoom.jsx  Login.jsx  Payments.jsx  Register.jsx  SessionManager.jsx  Setup.jsx
